# Hamro-Dokan

./: README.md  package.json  pyproject.toml
core/: settings.py  urls.py
hamro-dokan-vue/: README.md  package.json
hamro-dokan-vue/public/: index.html
hamro-dokan-vue/src/: App.vue  main.js
hamro-dokan-vue/src/components/: CartItem.vue  ProductList.vue
hamro-dokan-vue/src/router/: index.js
hamro-dokan-vue/src/store/: index.js
hamro-dokan-vue/src/views/: Home.vue  Success.vue
hamro-dokan-vue/src/views/auth/: Login.vue  Profile.vue  Register.vue
hamro-dokan-vue/src/views/cart/: Cart.vue
hamro-dokan-vue/src/views/category/: Category.vue
hamro-dokan-vue/src/views/checkout/: Checkout.vue
hamro-dokan-vue/src/views/product/: Product.vue
hamro-dokan-vue/src/views/search/: Search.vue
orders/: admin.py  models.py
orders/api/: views.py
orders/migrations/: 0001_initial.py
products/: admin.py  models.py
products/api/: seriailzers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_auto_20210502_0149.py  0002_productimage.py  0003_rename_descritption_product_description.py  0003_rename_image_productimage_images.py  0004_alter_product_description.py  0005_alter_product_price.py
