[tool.poetry]
name = "hamro-dokan"
version = "0.1.0"
description = ""
authors = ["surajmt8848 <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
Pillow = "^8.2.0"
django-cors-headers = "^3.7.0"
djoser = "^2.1.0"
stripe = "^2.56.0"
isort = "^5.8.0"
black = "^21.4b2"
django-filter = "^2.4.0"
djangorestframework-camel-case = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
